feat(sprint7): Day 2 완료 - SweetSpotCard 통합 + UI 개선
Sprint 7 Day 2 작업:
- OngoingSleepCard → SweetSpotCard 통합 (수면 중 상태 표시)
- QuickActionGrid 삭제 (FAB로 대체)
- LastActivityRow 신규 추가 (수면/수유/기저귀 시간)
- 실시간 경과 시간 Timer 구현

추가 개선:
- Growth 화면 UI 개선
- Settings Provider 추가
- Timeline 버그 수정 (filteredTodayActivities)
- i18n 업데이트

삭제된 파일:
- ongoing_sleep_card.dart
- quick_action_grid.dart
- quick_action_grid_test.dart

신규 파일:
- sweet_spot_card.dart
- last_activity_row.dart
- settings_provider.dart

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -214,9 +214,17 @@
   "cryAnalysisComingSoon": "Coming in Phase 2!",
   "cryAnalysisDescription": "AI-powered cry analysis will be available in Phase 2.",
 
+  "sweetSpotTitle": "Next Nap",
   "sweetSpotUnknown": "Checking",
-  "sweetSpotTooEarly": "Too Early",
-  "sweetSpotApproaching": "Approaching",
-  "sweetSpotOptimal": "Optimal Time!",
-  "sweetSpotOvertired": "Overtired"
+  "sweetSpotTooEarly": "Still has time",
+  "sweetSpotApproaching": "May get sleepy soon",
+  "sweetSpotOptimal": "Good time to put down",
+  "sweetSpotOvertired": "May have passed sleepy window",
+  "sweetSpotEmptyTitle": "Need sleep records",
+  "sweetSpotEmptySubtitle": "Record first sleep to\nget predicted times",
+  "sweetSpotDisclaimer": "This prediction is for reference only and may vary for each baby",
+
+  "sectionLanguage": "Language",
+  "languageChangeConfirm": "Change language?",
+  "languageChangeMessage": "The app will be displayed in the selected language."
 }
