--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -497,14 +497,29 @@
   "cryAnalysisDescription": "AI 기반 울음 분석 기능이 Phase 2에서 출시됩니다.",
   "@cryAnalysisDescription": {"description": "울음 분석 설명"},
 
+  "sweetSpotTitle": "다음 낮잠",
+  "@sweetSpotTitle": {"description": "Sweet Spot 카드 제목"},
   "sweetSpotUnknown": "확인 중",
   "@sweetSpotUnknown": {"description": "Sweet Spot - 확인 중"},
-  "sweetSpotTooEarly": "아직 일찍",
-  "@sweetSpotTooEarly": {"description": "Sweet Spot - 아직 일찍"},
-  "sweetSpotApproaching": "곧 수면 시간",
-  "@sweetSpotApproaching": {"description": "Sweet Spot - 곧 수면 시간"},
-  "sweetSpotOptimal": "지금이 최적!",
-  "@sweetSpotOptimal": {"description": "Sweet Spot - 최적"},
-  "sweetSpotOvertired": "과로 상태",
-  "@sweetSpotOvertired": {"description": "Sweet Spot - 과로"}
+  "sweetSpotTooEarly": "아직 여유 있어요",
+  "@sweetSpotTooEarly": {"description": "Sweet Spot - 아직 여유 있음 (Huckleberry 스타일)"},
+  "sweetSpotApproaching": "슬슬 졸려할 수 있어요",
+  "@sweetSpotApproaching": {"description": "Sweet Spot - 곧 졸릴 수 있음 (확률적 표현)"},
+  "sweetSpotOptimal": "지금 재우면 좋을 것 같아요",
+  "@sweetSpotOptimal": {"description": "Sweet Spot - 지금 재우면 좋을 것 같음 (부드러운 권유)"},
+  "sweetSpotOvertired": "졸린 시간이 지났을 수 있어요",
+  "@sweetSpotOvertired": {"description": "Sweet Spot - 졸린 시간 지남 (확률적 표현)"},
+  "sweetSpotEmptyTitle": "수면 기록이 필요해요",
+  "@sweetSpotEmptyTitle": {"description": "Sweet Spot Empty State 제목"},
+  "sweetSpotEmptySubtitle": "첫 수면을 기록하면\n예상 시간을 알려드릴게요",
+  "@sweetSpotEmptySubtitle": {"description": "Sweet Spot Empty State 부제목"},
+  "sweetSpotDisclaimer": "이 예측은 참고용이며, 아기마다 다를 수 있어요",
+  "@sweetSpotDisclaimer": {"description": "Sweet Spot 면책 문구"},
+
+  "sectionLanguage": "언어",
+  "@sectionLanguage": {"description": "섹션 - 언어"},
+  "languageChangeConfirm": "언어를 변경하시겠습니까?",
+  "@languageChangeConfirm": {"description": "언어 변경 확인 다이얼로그 제목"},
+  "languageChangeMessage": "앱이 선택한 언어로 표시됩니다.",
+  "@languageChangeMessage": {"description": "언어 변경 안내 메시지"}
 }
