feat(sprint8): 수유 기록 리디자인 Phase A + 이유식 기능 추가
Phase A (수유 기록 v6.0)
- FeedingContentType, FeedingMethodType, BreastSide enum 기반 리팩토링
- BreastFeedingForm: 모유 수유 상세 (직접/유축, 좌/우, 시간)
- FeedingTypeSelector: enum 기반 수유 종류 선택
- AmountInput: [-10][+10] 빠른 조절 버튼 추가

이유식 기록 기능 (Sprint 8 최소 개선)
- SolidFoodUnit enum (gram, spoon, bowl)
- BabyReaction enum (liked, neutral, rejected) + Material Icons
- SolidFoodForm: 음식 이름, 처음 먹이는 음식, 양(단위 선택), 반응
- RecordProvider 이유식 상태 및 saveFeeding() 연동
- i18n 키 추가 (한국어/영어)

기타 개선
- MigrationService 신규 추가
- HomeScreen/TimelineScreen FAB 통합
- SweetSpotCard 빈 상태 통합

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -221,10 +221,69 @@
   "sweetSpotOptimal": "Good time to put down",
   "sweetSpotOvertired": "May have passed sleepy window",
   "sweetSpotEmptyTitle": "Need sleep records",
+  "sweetSpotEmptyTitleWithName": "Start {babyName}'s first record",
+  "sweetSpotEmptyTitleDefault": "Start your first record",
   "sweetSpotEmptySubtitle": "Record first sleep to\nget predicted times",
+  "sweetSpotEmptyActionHint": "Tap a button below to start\nrecording feeding, sleep, or diaper",
+  "sweetSpotEmptyHint": "We'll predict sleep times once you have some records",
   "sweetSpotDisclaimer": "This prediction is for reference only and may vary for each baby",
+  "sweetSpotTitleWithName": "{babyName}'s next {sleepType}",
+  "@sweetSpotTitleWithName": {
+    "description": "Sweet Spot card title with baby name and sleep type",
+    "placeholders": {
+      "babyName": {"type": "String", "example": "Emma"},
+      "sleepType": {"type": "String", "example": "Nap"}
+    }
+  },
+
+  "timelineEmptyTodayTitle": "Start {babyName}'s first record",
+  "timelineEmptyTodayHint": "Tap the + button below to\nstart recording feeding, sleep, and diaper",
+  "timelineEmptyPastTitle": "No records for {date}",
+  "timelineEmptyPastHint": "Try selecting a different date",
 
   "sectionLanguage": "Language",
   "languageChangeConfirm": "Change language?",
-  "languageChangeMessage": "The app will be displayed in the selected language."
+  "languageChangeMessage": "The app will be displayed in the selected language.",
+
+  "feedingContentBreastMilk": "Breast Milk",
+  "feedingContentFormula": "Formula",
+  "feedingContentSolid": "Solid Food",
+
+  "feedingMethodDirect": "Direct Nursing",
+  "feedingMethodExpressed": "Expressed Milk",
+
+  "feedingBreastMilkSubLabel": "(direct/expressed)",
+
+  "feedingQuestionContent": "What type of feeding?",
+  "feedingQuestionMethod": "How was the milk given?",
+  "feedingQuestionSide": "Which side?",
+  "feedingQuestionDuration": "How long was the feeding?",
+  "feedingQuestionAmount": "Enter the amount",
+
+  "feedingSideLeft": "Left",
+  "feedingSideRight": "Right",
+  "feedingSideBoth": "Both",
+  "feedingSideLeftShort": "L",
+  "feedingSideRightShort": "R",
+  "feedingSideBothShort": "Both",
+
+  "feedingDurationMinutes": "{count}min",
+  "feedingPresetDurationMinutes": "{minutes}min",
+  "feedingAmountMl": "{amount}ml",
+  "feedingDirectInputPlaceholder": "Enter manually",
+
+  "solidFoodTitle": "Solid Food",
+  "solidFoodNameLabel": "Food name",
+  "solidFoodNameHint": "e.g., Carrot puree, Rice porridge",
+  "solidFoodFirstTry": "First time trying this food",
+  "solidFoodAmountLabel": "Amount",
+  "solidFoodReactionLabel": "Baby's reaction",
+
+  "solidUnitGram": "g",
+  "solidUnitSpoon": "spoon",
+  "solidUnitBowl": "bowl",
+
+  "babyReactionLiked": "Liked",
+  "babyReactionNeutral": "Neutral",
+  "babyReactionRejected": "Rejected"
 }
