feat(record): HOTFIX v1.1~v1.2 구현
HOTFIX v1.1: 날짜/시간 피커 UX 개선
- iOS 15+ 스타일 통합 휠 피커 (LuluDateTimePicker)
- 빠른 조정 버튼 (지금, -5분, -15분, -30분)
- SleepRecordScreen 통합

HOTFIX v1.2: 수유 기록 빠른 저장 버튼
- 최근 3개 수유 기록 빠른 버튼 (RecentFeedingButtons)
- 원탭 저장 (TTC < 2초)
- 롱프레스 수정 모드 (500ms)
- 3초 취소 기능 (Undo)
- 연타 방지 (1초)
- RecordProvider 확장 (loadRecentFeedings, quickSaveFeeding, undoLastSave)

추가 변경:
- 통계 화면 기반 구조 (lib/features/statistics/)
- LuluStatisticsColors 추가
- l10n 문자열 확장 (ko/en)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -227,6 +227,9 @@
   "sweetSpotEmptyActionHint": "Tap a button below to start\nrecording feeding, sleep, or diaper",
   "sweetSpotEmptyHint": "We'll predict sleep times once you have some records",
   "sweetSpotDisclaimer": "This prediction is for reference only and may vary for each baby",
+  "sweetSpotNoSleepTitle": "Record sleep to start predictions",
+  "sweetSpotNoSleepHint": "Once you have sleep records, we'll predict the next sleep time",
+  "sweetSpotRecordSleepButton": "Record Sleep",
   "sweetSpotTitleWithName": "{babyName}'s next {sleepType}",
   "@sweetSpotTitleWithName": {
     "description": "Sweet Spot card title with baby name and sleep type",
@@ -285,5 +288,57 @@
 
   "babyReactionLiked": "Liked",
   "babyReactionNeutral": "Neutral",
-  "babyReactionRejected": "Rejected"
+  "babyReactionRejected": "Rejected",
+
+  "statisticsTitle": "Statistics",
+  "statisticsWeeklySummary": "This Week's Summary",
+  "statisticsSleep": "Sleep",
+  "statisticsFeeding": "Feeding",
+  "statisticsDiaper": "Diaper",
+  "statisticsCrying": "Crying",
+  "statisticsPerDayAverage": "/day avg",
+  "statisticsAverage": "Average",
+  "statisticsTogetherView": "Together View",
+  "statisticsTogetherViewTitle": "This Week Together",
+  "statisticsTogetherViewGuide": "Each baby has their own unique pattern 💜",
+  "statisticsCorrectedAge": "Corrected {days}d",
+  "@statisticsCorrectedAge": {
+    "description": "Corrected age display",
+    "placeholders": {
+      "days": {"type": "int", "example": "42"}
+    }
+  },
+  "statisticsSleepReport": "Sleep Report",
+  "statisticsFeedingReport": "Feeding Report",
+  "statisticsDiaperReport": "Diaper Report",
+  "statisticsCryingReport": "Crying Report",
+  "statisticsDisclaimer": "These statistics are for reference only, not medical advice",
+  "statisticsCorrectedAgeNote": "Analyzed based on corrected age",
+
+  "dateTimePickerTitle": "Select Time",
+  "dateTimeNow": "Now",
+  "dateTime5MinAgo": "-5 min",
+  "dateTime15MinAgo": "-15 min",
+  "dateTime30MinAgo": "-30 min",
+  "dateTimeCancel": "Cancel",
+  "dateTimeConfirm": "Confirm",
+  "sleepStartTime": "Sleep Start",
+  "sleepEndTime": "Sleep End",
+  "sleepEndNow": "End Now",
+  "sleepSelectEndTime": "Select",
+
+  "quickFeedingTitle": "Quick Record",
+  "quickFeedingHint": "Tap: Save / Hold: Edit",
+  "quickFeedingEmpty": "No records yet",
+  "quickFeedingEmptyDesc": "Quick buttons appear after your first feeding record!",
+  "quickFeedingSaved": "{summary} saved",
+  "@quickFeedingSaved": {
+    "description": "Quick feeding save confirmation",
+    "placeholders": {
+      "summary": {"type": "String", "example": "Formula 120ml"}
+    }
+  },
+  "quickFeedingUndo": "Undo",
+  "quickFeedingUndone": "Undone",
+  "orNewEntry": "or enter new"
 }
