--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -536,6 +536,12 @@
   "@sweetSpotEmptyHint": {"description": "Sweet Spot Empty State 힌트"},
   "sweetSpotDisclaimer": "이 예측은 참고용이며, 아기마다 다를 수 있어요",
   "@sweetSpotDisclaimer": {"description": "Sweet Spot 면책 문구"},
+  "sweetSpotNoSleepTitle": "수면을 기록하면 예측이 시작돼요",
+  "@sweetSpotNoSleepTitle": {"description": "Sweet Spot 수면 기록 없을 때 제목"},
+  "sweetSpotNoSleepHint": "수면 기록이 쌓이면 다음 수면 시간을 예측해 드릴게요",
+  "@sweetSpotNoSleepHint": {"description": "Sweet Spot 수면 기록 없을 때 힌트"},
+  "sweetSpotRecordSleepButton": "수면 기록하기",
+  "@sweetSpotRecordSleepButton": {"description": "Sweet Spot 수면 기록 버튼"},
 
   "timelineEmptyTodayTitle": "{babyName}의 첫 기록을 시작해보세요",
   "@timelineEmptyTodayTitle": {
@@ -654,5 +660,92 @@
   "babyReactionNeutral": "보통",
   "@babyReactionNeutral": {"description": "아기 반응 - 보통"},
   "babyReactionRejected": "거부",
-  "@babyReactionRejected": {"description": "아기 반응 - 거부"}
+  "@babyReactionRejected": {"description": "아기 반응 - 거부"},
+
+  "statisticsTitle": "통계",
+  "@statisticsTitle": {"description": "통계 화면 제목"},
+  "statisticsWeeklySummary": "이번 주 요약",
+  "@statisticsWeeklySummary": {"description": "주간 요약 섹션 제목"},
+  "statisticsSleep": "수면",
+  "@statisticsSleep": {"description": "통계 - 수면"},
+  "statisticsFeeding": "수유",
+  "@statisticsFeeding": {"description": "통계 - 수유"},
+  "statisticsDiaper": "기저귀",
+  "@statisticsDiaper": {"description": "통계 - 기저귀"},
+  "statisticsCrying": "울음",
+  "@statisticsCrying": {"description": "통계 - 울음"},
+  "statisticsPerDayAverage": "/일 평균",
+  "@statisticsPerDayAverage": {"description": "통계 - 일 평균 단위"},
+  "statisticsAverage": "평균",
+  "@statisticsAverage": {"description": "통계 - 평균"},
+  "statisticsTogetherView": "함께 보기",
+  "@statisticsTogetherView": {"description": "함께 보기 탭 레이블"},
+  "statisticsTogetherViewTitle": "이번 주 함께 보기",
+  "@statisticsTogetherViewTitle": {"description": "함께 보기 뷰 제목"},
+  "statisticsTogetherViewGuide": "각 아기는 고유한 패턴을 가지고 있어요 💜",
+  "@statisticsTogetherViewGuide": {"description": "함께 보기 안내 메시지"},
+  "statisticsCorrectedAge": "교정 {days}일",
+  "@statisticsCorrectedAge": {
+    "description": "교정연령 표시",
+    "placeholders": {
+      "days": {"type": "int", "example": "42"}
+    }
+  },
+  "statisticsSleepReport": "수면 리포트",
+  "@statisticsSleepReport": {"description": "수면 리포트 카드 제목"},
+  "statisticsFeedingReport": "수유 리포트",
+  "@statisticsFeedingReport": {"description": "수유 리포트 카드 제목"},
+  "statisticsDiaperReport": "기저귀 리포트",
+  "@statisticsDiaperReport": {"description": "기저귀 리포트 카드 제목"},
+  "statisticsCryingReport": "울음 리포트",
+  "@statisticsCryingReport": {"description": "울음 리포트 카드 제목"},
+  "statisticsDisclaimer": "이 통계는 참고용이며 의료 판단이 아닙니다",
+  "@statisticsDisclaimer": {"description": "통계 면책 문구"},
+  "statisticsCorrectedAgeNote": "교정연령 기준으로 분석되었습니다",
+  "@statisticsCorrectedAgeNote": {"description": "교정연령 기준 안내"},
+
+  "dateTimePickerTitle": "시간 선택",
+  "@dateTimePickerTitle": {"description": "날짜/시간 피커 제목"},
+  "dateTimeNow": "지금",
+  "@dateTimeNow": {"description": "현재 시간 버튼"},
+  "dateTime5MinAgo": "-5분",
+  "@dateTime5MinAgo": {"description": "5분 전 버튼"},
+  "dateTime15MinAgo": "-15분",
+  "@dateTime15MinAgo": {"description": "15분 전 버튼"},
+  "dateTime30MinAgo": "-30분",
+  "@dateTime30MinAgo": {"description": "30분 전 버튼"},
+  "dateTimeCancel": "취소",
+  "@dateTimeCancel": {"description": "날짜/시간 피커 취소"},
+  "dateTimeConfirm": "확인",
+  "@dateTimeConfirm": {"description": "날짜/시간 피커 확인"},
+  "sleepStartTime": "수면 시작",
+  "@sleepStartTime": {"description": "수면 시작 시간 라벨"},
+  "sleepEndTime": "수면 종료",
+  "@sleepEndTime": {"description": "수면 종료 시간 라벨"},
+  "sleepEndNow": "지금 종료",
+  "@sleepEndNow": {"description": "수면 지금 종료 버튼"},
+  "sleepSelectEndTime": "시간 선택",
+  "@sleepSelectEndTime": {"description": "수면 종료 시간 선택 버튼"},
+
+  "quickFeedingTitle": "빠른 기록",
+  "@quickFeedingTitle": {"description": "빠른 수유 기록 섹션 제목"},
+  "quickFeedingHint": "탭: 저장 / 길게: 수정",
+  "@quickFeedingHint": {"description": "빠른 수유 버튼 힌트"},
+  "quickFeedingEmpty": "아직 기록이 없어요",
+  "@quickFeedingEmpty": {"description": "빠른 수유 빈 상태 제목"},
+  "quickFeedingEmptyDesc": "첫 수유를 기록하면 빠른 버튼이 나타나요!",
+  "@quickFeedingEmptyDesc": {"description": "빠른 수유 빈 상태 설명"},
+  "quickFeedingSaved": "{summary} 저장됨",
+  "@quickFeedingSaved": {
+    "description": "빠른 수유 저장 완료",
+    "placeholders": {
+      "summary": {"type": "String", "example": "분유 120ml"}
+    }
+  },
+  "quickFeedingUndo": "취소",
+  "@quickFeedingUndo": {"description": "빠른 수유 저장 취소 버튼"},
+  "quickFeedingUndone": "취소됨",
+  "@quickFeedingUndone": {"description": "빠른 수유 저장 취소 완료"},
+  "orNewEntry": "또는 새로 입력",
+  "@orNewEntry": {"description": "빠른 기록과 상세 입력 사이 구분선"}
 }
