feat: Sprint 8 완료 + TestFlight 준비
- 온보딩 핫픽스 (조산아 버튼, 중복 체중 제거)
- Lulu 로고 추가
- QuickRecordButton 레이스 컨디션 수정
- Bundle ID 변경 (com.lululabs.lulu)
- 통계 화면 개선
- 타임라인 기록 히스토리 추가

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -315,6 +315,18 @@
   "statisticsDisclaimer": "These statistics are for reference only, not medical advice",
   "statisticsCorrectedAgeNote": "Analyzed based on corrected age",
 
+  "recordHistoryTitle": "Records",
+  "tabTimeline": "Timeline",
+  "tabStatistics": "Statistics",
+  "statsSleep": "Sleep",
+  "statsFeeding": "Feeding",
+  "statsDiaper": "Diaper",
+  "unitHours": "hrs",
+  "unitTimes": "times",
+  "weeklyTrendTitle": "Weekly Sleep Trend",
+  "statisticsEmptyTitle": "No statistics yet",
+  "statisticsEmptyHint": "Statistics will appear as you add records",
+
   "dateTimePickerTitle": "Select Time",
   "dateTimeNow": "Now",
   "dateTime5MinAgo": "-5 min",
