--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -704,6 +704,29 @@
   "statisticsCorrectedAgeNote": "교정연령 기준으로 분석되었습니다",
   "@statisticsCorrectedAgeNote": {"description": "교정연령 기준 안내"},
 
+  "recordHistoryTitle": "기록",
+  "@recordHistoryTitle": {"description": "기록 히스토리 화면 제목"},
+  "tabTimeline": "타임라인",
+  "@tabTimeline": {"description": "타임라인 탭 레이블"},
+  "tabStatistics": "통계",
+  "@tabStatistics": {"description": "통계 탭 레이블"},
+  "statsSleep": "수면",
+  "@statsSleep": {"description": "통계 카드 - 수면"},
+  "statsFeeding": "수유",
+  "@statsFeeding": {"description": "통계 카드 - 수유"},
+  "statsDiaper": "기저귀",
+  "@statsDiaper": {"description": "통계 카드 - 기저귀"},
+  "unitHours": "시간",
+  "@unitHours": {"description": "단위 - 시간"},
+  "unitTimes": "회",
+  "@unitTimes": {"description": "단위 - 회"},
+  "weeklyTrendTitle": "주간 수면 추이",
+  "@weeklyTrendTitle": {"description": "주간 트렌드 차트 제목"},
+  "statisticsEmptyTitle": "아직 통계가 없어요",
+  "@statisticsEmptyTitle": {"description": "통계 빈 상태 제목"},
+  "statisticsEmptyHint": "기록을 쌓으면 통계가 나타나요",
+  "@statisticsEmptyHint": {"description": "통계 빈 상태 힌트"},
+
   "dateTimePickerTitle": "시간 선택",
   "@dateTimePickerTitle": {"description": "날짜/시간 피커 제목"},
   "dateTimeNow": "지금",
