feat(family): Family Sharing 기능 구현
Family Sharing 기능을 통해 가족 구성원들이 아기 기록을 공유할 수 있습니다.

## 주요 기능
- 초대 코드 생성 및 공유 (6자리, 7일 유효)
- 가족 참여 (초대 코드 입력)
- 기존 기록 마이그레이션 (아기 매핑)
- 소유권 이전
- 가족 나가기

## 추가된 파일
### DB 마이그레이션
- supabase/migrations/003_family_sharing.sql

### 모델
- lib/features/family/models/family_member_model.dart
- lib/features/family/models/family_invite_model.dart
- lib/features/family/models/invite_info_model.dart

### 서비스
- lib/features/family/services/invite_service.dart
- lib/core/services/deep_link_service.dart

### Provider
- lib/features/family/providers/family_provider.dart

### UI
- lib/features/family/screens/family_screen.dart
- lib/features/family/screens/join_family_screen.dart
- lib/features/family/screens/transfer_owner_screen.dart
- lib/features/family/screens/baby_mapping_screen.dart
- lib/features/family/widgets/member_list_tile.dart
- lib/features/family/widgets/invite_bottom_sheet.dart

## 수정된 파일
- iOS Info.plist: 딥링크 설정 추가
- pubspec.yaml: app_links, collection 패키지 추가
- lulu_colors.dart: deepIndigo 색상 추가
- home_provider.dart: onFamilyChanged 메서드 추가
- i18n: 50+ 다국어 문자열 추가 (ko, en)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -352,5 +352,168 @@
   },
   "quickFeedingUndo": "Undo",
   "quickFeedingUndone": "Undone",
-  "orNewEntry": "or enter new"
+  "orNewEntry": "or enter new",
+
+  "importTitle": "Import Data",
+  "importSubtitle": "Bring records from other apps",
+  "importSelectFormat": "Select App Format",
+  "importBabytimeTitle": "Babytime",
+  "importBabytimeDesc": "TXT file (activity_*.txt)",
+  "importHuckleberryTitle": "Huckleberry",
+  "importHuckleberryDesc": "CSV file export",
+  "importSelectFile": "Select File",
+  "importAnalyzing": "Analyzing file...",
+  "importAnalyzingDesc": "Reading records from file",
+  "importPreviewTitle": "Preview",
+  "importPreviewDesc": "{count} records found",
+  "@importPreviewDesc": {
+    "placeholders": {
+      "count": {"type": "int"}
+    }
+  },
+  "importPreviewPeriod": "Period: {start} ~ {end}",
+  "@importPreviewPeriod": {
+    "placeholders": {
+      "start": {"type": "String"},
+      "end": {"type": "String"}
+    }
+  },
+  "importPreviewFeeding": "Feeding {count}",
+  "@importPreviewFeeding": {
+    "placeholders": {
+      "count": {"type": "int"}
+    }
+  },
+  "importPreviewSleep": "Sleep {count}",
+  "@importPreviewSleep": {
+    "placeholders": {
+      "count": {"type": "int"}
+    }
+  },
+  "importPreviewDiaper": "Diaper {count}",
+  "@importPreviewDiaper": {
+    "placeholders": {
+      "count": {"type": "int"}
+    }
+  },
+  "importPreviewPlay": "Play {count}",
+  "@importPreviewPlay": {
+    "placeholders": {
+      "count": {"type": "int"}
+    }
+  },
+  "importPreviewHealth": "Health {count}",
+  "@importPreviewHealth": {
+    "placeholders": {
+      "count": {"type": "int"}
+    }
+  },
+  "importSelectBaby": "Select Baby",
+  "importSelectBabyDesc": "Which baby are these records for?",
+  "importStartButton": "Start Import",
+  "importImporting": "Importing...",
+  "importImportingDesc": "Adding records to LULU",
+  "importProgress": "{percent}% complete",
+  "@importProgress": {
+    "placeholders": {
+      "percent": {"type": "int"}
+    }
+  },
+  "importCompleteTitle": "Import Complete!",
+  "importCompleteSuccess": "{count} records imported",
+  "@importCompleteSuccess": {
+    "placeholders": {
+      "count": {"type": "int"}
+    }
+  },
+  "importCompleteSkipped": "{count} duplicates skipped",
+  "@importCompleteSkipped": {
+    "placeholders": {
+      "count": {"type": "int"}
+    }
+  },
+  "importErrorTitle": "Import Failed",
+  "importErrorRetry": "Retry",
+  "importErrorBack": "Go Back",
+  "importDone": "Done",
+  "importNewImport": "Import Another File",
+  "importDuplicateNote": "Duplicate records (same type and time) are automatically skipped",
+
+  "familyManagement": "Family Management",
+  "familyMembers": "Family Members",
+  "pendingInvites": "Pending Invites",
+  "familySettings": "Family Settings",
+  "inviteFamily": "Invite Family Member",
+  "transferOwnership": "Transfer Ownership",
+  "joinOtherFamily": "Join Another Family",
+  "joinOtherFamilyDesc": "Leave current family and join another one.",
+  "leaveFamily": "Leave Family",
+  "deleteFamily": "Delete Family",
+  "deleteFamilyDesc": "Deleting the family will remove all records.",
+  "leaveFamilyDesc": "You won't be able to see records anymore.",
+  "cannotLeave": "Owner cannot leave",
+  "transferOwnershipFirst": "Please transfer ownership to another member first.",
+  "leave": "Leave",
+  "cancel": "Cancel",
+  "confirm": "Confirm",
+  "continueButton": "Continue",
+
+  "joinFamily": "Join Family",
+  "enterInviteCode": "Enter invite code",
+  "enterInviteCodeDesc": "Enter the 6-digit code you received from the family owner.",
+  "joinFamilyButton": "Join Family",
+  "validInvite": "Valid invite",
+  "memberCount": "{count} family members",
+  "@memberCount": {
+    "placeholders": {
+      "count": {"type": "String"}
+    }
+  },
+  "babyNames": "Babies: {names}",
+  "@babyNames": {
+    "placeholders": {
+      "names": {"type": "String"}
+    }
+  },
+  "expiresIn": "Expires in {days} days",
+  "@expiresIn": {
+    "placeholders": {
+      "days": {"type": "String"}
+    }
+  },
+  "joinedFamily": "Joined the family!",
+
+  "transferOwnershipTitle": "Who should be the new owner?",
+  "transferOwnershipDesc": "The owner can invite and manage family members.",
+  "transferOwnershipButton": "Transfer Ownership",
+  "confirmTransfer": "Transfer ownership?",
+  "confirmTransferDesc": "This action cannot be undone.",
+  "ownershipTransferred": "Ownership transferred",
+
+  "importRecords": "Import Records",
+  "mapBabiesTitle": "Import existing records?",
+  "mapBabiesDesc": "Link your babies to the new family babies to import records.",
+  "selectBaby": "Select",
+  "doNotLink": "Don't link",
+  "skipImport": "Skip",
+  "importRecordsButton": "Import Records",
+  "recordsImported": "{count} records imported!",
+  "@recordsImported": {
+    "placeholders": {
+      "count": {"type": "int"}
+    }
+  },
+
+  "inviteByEmail": "Invite by email",
+  "inviteValidDays": "Valid for {days} days",
+  "@inviteValidDays": {
+    "placeholders": {
+      "days": {"type": "String"}
+    }
+  },
+  "shareKakao": "KakaoTalk",
+  "copyCode": "Copy Code",
+  "inviteEmailSent": "Invite email sent!",
+  "invalidEmail": "Please enter a valid email",
+  "codeCopied": "Invite code copied!"
 }
