--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -770,5 +770,183 @@
   "quickFeedingUndone": "취소됨",
   "@quickFeedingUndone": {"description": "빠른 수유 저장 취소 완료"},
   "orNewEntry": "또는 새로 입력",
-  "@orNewEntry": {"description": "빠른 기록과 상세 입력 사이 구분선"}
+  "@orNewEntry": {"description": "빠른 기록과 상세 입력 사이 구분선"},
+
+  "importTitle": "기존 기록 가져오기",
+  "@importTitle": {"description": "Import 화면 제목"},
+  "importSelectFile": "어떤 파일을 가져올까요?",
+  "@importSelectFile": {"description": "파일 선택 안내"},
+  "importTxtOption": "텍스트 파일 (.txt)",
+  "@importTxtOption": {"description": "TXT 파일 옵션"},
+  "importTxtDesc": "베이비타임 등",
+  "@importTxtDesc": {"description": "TXT 파일 설명"},
+  "importCsvOption": "CSV 파일 (.csv)",
+  "@importCsvOption": {"description": "CSV 파일 옵션"},
+  "importCsvDesc": "Huckleberry 등",
+  "@importCsvDesc": {"description": "CSV 파일 설명"},
+  "importHint": "대부분의 육아 앱 설정에서 데이터 내보내기를 지원해요",
+  "@importHint": {"description": "Import 힌트"},
+  "importAnalyzing": "파일을 분석하고 있어요...",
+  "@importAnalyzing": {"description": "분석 중 메시지"},
+  "importAnalyzed": "파일 분석 완료",
+  "@importAnalyzed": {"description": "분석 완료 메시지"},
+  "importFeedingCount": "수유",
+  "@importFeedingCount": {"description": "수유 기록 수"},
+  "importSleepCount": "수면",
+  "@importSleepCount": {"description": "수면 기록 수"},
+  "importDiaperCount": "기저귀",
+  "@importDiaperCount": {"description": "기저귀 기록 수"},
+  "importPlayCount": "놀이",
+  "@importPlayCount": {"description": "놀이 기록 수"},
+  "importTotal": "총",
+  "@importTotal": {"description": "총 기록 수"},
+  "importBabyConnect": "아기 연결",
+  "@importBabyConnect": {"description": "아기 연결 섹션 제목"},
+  "importBabyConnectDesc": "이 기록을 어떤 아기에게 연결할까요?",
+  "@importBabyConnectDesc": {"description": "아기 연결 설명"},
+  "importDuplicateWarning": "기존 기록과 중복되면 건너뜁니다",
+  "@importDuplicateWarning": {"description": "중복 경고 메시지"},
+  "importButton": "{count}개 기록 가져오기",
+  "@importButton": {
+    "description": "가져오기 버튼",
+    "placeholders": {
+      "count": {"type": "int", "example": "147"}
+    }
+  },
+  "importProgress": "기록을 가져오는 중...",
+  "@importProgress": {"description": "가져오기 진행 중 메시지"},
+  "importComplete": "기록을 가져왔어요!",
+  "@importComplete": {"description": "가져오기 완료 메시지"},
+  "importSuccess": "성공",
+  "@importSuccess": {"description": "성공 라벨"},
+  "importSkipped": "건너뜀 (중복)",
+  "@importSkipped": {"description": "건너뜀 라벨"},
+  "importGoHome": "홈으로 돌아가기",
+  "@importGoHome": {"description": "홈으로 버튼"},
+
+  "familyManagement": "가족 관리",
+  "@familyManagement": {"description": "가족 관리 화면 제목"},
+  "familyMembers": "가족 멤버",
+  "@familyMembers": {"description": "가족 멤버 섹션 제목"},
+  "pendingInvites": "대기 중인 초대",
+  "@pendingInvites": {"description": "대기 중인 초대 섹션 제목"},
+  "familySettings": "가족 설정",
+  "@familySettings": {"description": "가족 설정 섹션 제목"},
+  "inviteFamily": "가족 초대하기",
+  "@inviteFamily": {"description": "가족 초대 버튼"},
+  "transferOwnership": "관리자 넘기기",
+  "@transferOwnership": {"description": "관리자 넘기기 메뉴"},
+  "joinOtherFamily": "다른 가족 참여",
+  "@joinOtherFamily": {"description": "다른 가족 참여 메뉴"},
+  "joinOtherFamilyDesc": "현재 가족을 나가고 다른 가족에 참여해요.",
+  "@joinOtherFamilyDesc": {"description": "다른 가족 참여 설명"},
+  "leaveFamily": "가족 나가기",
+  "@leaveFamily": {"description": "가족 나가기 메뉴"},
+  "deleteFamily": "가족 삭제",
+  "@deleteFamily": {"description": "가족 삭제 제목"},
+  "deleteFamilyDesc": "가족을 삭제하면 모든 기록이 사라져요.",
+  "@deleteFamilyDesc": {"description": "가족 삭제 설명"},
+  "leaveFamilyDesc": "더 이상 기록을 볼 수 없어요.",
+  "@leaveFamilyDesc": {"description": "가족 나가기 설명"},
+  "cannotLeave": "관리자는 나갈 수 없어요",
+  "@cannotLeave": {"description": "관리자 나갈 수 없음 제목"},
+  "transferOwnershipFirst": "먼저 다른 멤버에게 관리자를 넘겨주세요.",
+  "@transferOwnershipFirst": {"description": "관리자 넘기기 안내"},
+  "leave": "나가기",
+  "@leave": {"description": "나가기 버튼"},
+  "cancel": "취소",
+  "@cancel": {"description": "취소 버튼"},
+  "confirm": "확인",
+  "@confirm": {"description": "확인 버튼"},
+  "continueButton": "계속",
+  "@continueButton": {"description": "계속 버튼"},
+
+  "joinFamily": "가족 참여",
+  "@joinFamily": {"description": "가족 참여 화면 제목"},
+  "enterInviteCode": "초대 코드를 입력하세요",
+  "@enterInviteCode": {"description": "초대 코드 입력 안내"},
+  "enterInviteCodeDesc": "가족 관리자에게 받은 6자리 코드를 입력해주세요.",
+  "@enterInviteCodeDesc": {"description": "초대 코드 입력 설명"},
+  "joinFamilyButton": "가족 참여하기",
+  "@joinFamilyButton": {"description": "가족 참여 버튼"},
+  "validInvite": "유효한 초대",
+  "@validInvite": {"description": "유효한 초대 라벨"},
+  "memberCount": "{count}명의 가족",
+  "@memberCount": {
+    "description": "가족 멤버 수",
+    "placeholders": {
+      "count": {"type": "String"}
+    }
+  },
+  "babyNames": "아기: {names}",
+  "@babyNames": {
+    "description": "아기 이름 목록",
+    "placeholders": {
+      "names": {"type": "String"}
+    }
+  },
+  "expiresIn": "{days}일 후 만료",
+  "@expiresIn": {
+    "description": "만료 일수",
+    "placeholders": {
+      "days": {"type": "String"}
+    }
+  },
+  "joinedFamily": "가족에 참여했어요!",
+  "@joinedFamily": {"description": "가족 참여 완료 메시지"},
+
+  "transferOwnershipTitle": "누구에게 관리자를 넘길까요?",
+  "@transferOwnershipTitle": {"description": "관리자 넘기기 제목"},
+  "transferOwnershipDesc": "관리자는 가족 멤버를 초대하고 관리할 수 있어요.",
+  "@transferOwnershipDesc": {"description": "관리자 넘기기 설명"},
+  "transferOwnershipButton": "관리자 넘기기",
+  "@transferOwnershipButton": {"description": "관리자 넘기기 버튼"},
+  "confirmTransfer": "관리자를 넘기시겠어요?",
+  "@confirmTransfer": {"description": "관리자 넘기기 확인 제목"},
+  "confirmTransferDesc": "이 작업은 되돌릴 수 없어요.",
+  "@confirmTransferDesc": {"description": "관리자 넘기기 확인 설명"},
+  "ownershipTransferred": "관리자를 넘겼어요",
+  "@ownershipTransferred": {"description": "관리자 넘기기 완료 메시지"},
+
+  "importRecords": "기록 가져오기",
+  "@importRecords": {"description": "기록 가져오기 화면 제목"},
+  "mapBabiesTitle": "기존 기록을 가져올까요?",
+  "@mapBabiesTitle": {"description": "아기 매핑 제목"},
+  "mapBabiesDesc": "내 아기와 새 가족 아기를 연결하면 기록을 가져올 수 있어요.",
+  "@mapBabiesDesc": {"description": "아기 매핑 설명"},
+  "selectBaby": "선택",
+  "@selectBaby": {"description": "아기 선택 힌트"},
+  "doNotLink": "연결 안 함",
+  "@doNotLink": {"description": "연결 안 함 옵션"},
+  "skipImport": "가져오지 않기",
+  "@skipImport": {"description": "가져오지 않기 버튼"},
+  "importRecordsButton": "기록 가져오기",
+  "@importRecordsButton": {"description": "기록 가져오기 버튼"},
+  "recordsImported": "{count}개 기록을 가져왔어요!",
+  "@recordsImported": {
+    "description": "기록 가져오기 완료 메시지",
+    "placeholders": {
+      "count": {"type": "int"}
+    }
+  },
+
+  "inviteByEmail": "이메일로 초대",
+  "@inviteByEmail": {"description": "이메일 초대 입력 라벨"},
+  "inviteValidDays": "{days}일간 유효",
+  "@inviteValidDays": {
+    "description": "초대 유효 기간",
+    "placeholders": {
+      "days": {"type": "String"}
+    }
+  },
+  "shareKakao": "카카오톡",
+  "@shareKakao": {"description": "카카오톡 공유 버튼"},
+  "copyCode": "코드 복사",
+  "@copyCode": {"description": "코드 복사 버튼"},
+  "inviteEmailSent": "초대 이메일을 보냈어요!",
+  "@inviteEmailSent": {"description": "이메일 발송 완료 메시지"},
+  "invalidEmail": "올바른 이메일을 입력해주세요",
+  "@invalidEmail": {"description": "잘못된 이메일 에러"},
+  "codeCopied": "초대 코드가 복사되었어요!",
+  "@codeCopied": {"description": "코드 복사 완료 메시지"}
 }
